# gemini-rag-chatbot

./: README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  deps.py  orgs.py  projects.py
backend/app/core/: config.py  encryption.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/services/: gemini.py
frontend/: package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/orgs/[slug]/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: encryption.ts
